--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,13 @@ jobs:
           exit 1
         fi
 
-    - name: Run tests
+    - name: Run tests (Unix)
+      if: runner.os != 'Windows'
+      run: go test -v -race -timeout 5m -coverprofile=coverage.out -covermode=atomic ./...
+
+    - name: Run tests (Windows)
+      if: runner.os == 'Windows'
+      shell: cmd
       run: go test -v -race -timeout 5m -coverprofile=coverage.out -covermode=atomic ./...
 
     - name: Upload coverage to Codecov
