--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,12 +38,17 @@ jobs:
     - name: Run go vet
       run: go vet ./...
 
-    - name: Run gofmt
+    - name: Install goimports
+      if: runner.os != 'Windows'
+      run: go install golang.org/x/tools/cmd/goimports@latest
+
+    - name: Check formatting and imports
       if: runner.os != 'Windows'
       run: |
-        if [ -n "$(gofmt -l .)" ]; then
-          echo "Go code is not formatted:"
-          gofmt -d .
+        GOBIN=$(go env GOPATH)/bin
+        if [ -n "$($GOBIN/goimports -l -local github.com/mstephenholl/go-solar .)" ]; then
+          echo "Code is not formatted or imports need organization:"
+          $GOBIN/goimports -d -local github.com/mstephenholl/go-solar .
           exit 1
         fi
 
