--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,10 @@
 name: Release
 
 on:
-  push:
+  workflow_run:
+    workflows: ["CI"]
+    types:
+      - completed
     branches: [ master ]
   workflow_dispatch:  # Allow manual trigger
 
@@ -12,8 +15,10 @@ jobs:
   release:
     name: Create Automated Release
     runs-on: ubuntu-latest
-    # Only run if CI passes
-    if: github.ref == 'refs/heads/master'
+    # Only run if CI workflow completed successfully
+    if: |
+      github.event.workflow_run.conclusion == 'success' ||
+      github.event_name == 'workflow_dispatch'
 
     steps:
     - name: Checkout code
@@ -233,25 +238,6 @@ jobs:
         echo "✅ Changelog generated successfully"
         cat changelog.md
 
-    - name: Run tests
-      if: steps.check_tag.outputs.exists == 'false'
-      run: |
-        echo "🧪 Running tests..."
-        go test -v -race -timeout 5m -coverprofile=coverage.out -covermode=atomic ./...
-
-    - name: Run linter
-      if: steps.check_tag.outputs.exists == 'false'
-      uses: golangci/golangci-lint-action@v8
-      with:
-        version: latest
-        args: --timeout=5m
-
-    - name: Build
-      if: steps.check_tag.outputs.exists == 'false'
-      run: |
-        echo "🔨 Building..."
-        go build -v ./...
-
     - name: Create Git tag
       if: steps.check_tag.outputs.exists == 'false'
       run: |
@@ -273,14 +259,6 @@ jobs:
         generate_release_notes: false
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Upload coverage artifact
-      if: steps.check_tag.outputs.exists == 'false'
-      uses: actions/upload-artifact@v4
-      with:
-        name: coverage-report-v${{ steps.version.outputs.version }}
-        path: coverage.out
-        retention-days: 30
 
     - name: Summary
       if: steps.check_tag.outputs.exists == 'false'
