chore(ci): create composite action and update Go matrix to supported versions
  Centralize Go setup into a reusable composite action at
  .github/actions/setup-go/action.yml, replacing duplicated checkout,
  setup-go, and dependency boilerplate across all workflows. Update test
  matrix from [1.21, 1.22, 1.23] to [1.24, 1.25] per Go's support
  policy. Bump go.mod minimum from 1.21 to 1.24. Enable intrange and
  copyloopvar linters now that minimum Go version is 1.22+.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -21,8 +21,8 @@ linters:
     - nilerr # Find code that returns nil even if error is not nil
     # Modern Go syntax linters
     - ireturn # Accept interfaces, return concrete types (supports generics)
-    # - intrange # Find places where for loops could use integer ranges (Go 1.22+) // Uncomment when Go 1.22+ is used
-    # - copyloopvar # Detect places where loop variables are copied (Go 1.22+) // Uncomment when Go 1.22+ is used
+    - intrange # Find places where for loops could use integer ranges (Go 1.22+)
+    - copyloopvar # Detect places where loop variables are copied (Go 1.22+)
     - asasalint # Check for passing []any as any in variadic functions
 
 # Linter-specific settings
