--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,23 +17,13 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        go-version: ['1.21', '1.22', '1.23']
+        go-version: ['1.24', '1.25']
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Set up Go
-      uses: actions/setup-go@v5
+    - name: Setup Go environment
+      uses: ./.github/actions/setup-go
       with:
         go-version: ${{ matrix.go-version }}
-        cache: true
-
-    - name: Download dependencies
-      run: go mod download
-
-    - name: Verify dependencies
-      run: go mod verify
 
     - name: Run go vet
       run: go vet ./...
@@ -62,7 +52,7 @@ jobs:
       run: go test -v -race -timeout 5m -coverprofile=coverage.out -covermode=atomic ./...
 
     - name: Upload coverage to Codecov
-      if: matrix.os == 'ubuntu-latest' && matrix.go-version == '1.23'
+      if: matrix.os == 'ubuntu-latest' && matrix.go-version == '1.25'
       uses: codecov/codecov-action@v4
       with:
         files: ./coverage.out
@@ -76,14 +66,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Set up Go
-      uses: actions/setup-go@v5
-      with:
-        go-version: '1.23'
-        cache: true
+    - name: Setup Go environment
+      uses: ./.github/actions/setup-go
 
     - name: Run golangci-lint
       uses: golangci/golangci-lint-action@v8
@@ -96,14 +80,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Set up Go
-      uses: actions/setup-go@v5
-      with:
-        go-version: '1.23'
-        cache: true
+    - name: Setup Go environment
+      uses: ./.github/actions/setup-go
 
     - name: Run Gosec Security Scanner
       uses: securego/gosec@master
@@ -121,14 +99,8 @@ jobs:
     needs: [test, lint]
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Set up Go
-      uses: actions/setup-go@v5
-      with:
-        go-version: '1.23'
-        cache: true
+    - name: Setup Go environment
+      uses: ./.github/actions/setup-go
 
     - name: Build
       run: go build -v ./...
