--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -14,22 +14,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+    - name: Setup Go environment
+      uses: ./.github/actions/setup-go
       with:
-        fetch-depth: 0
-
-    - name: Set up Go
-      uses: actions/setup-go@v5
-      with:
-        go-version: '1.23'
-        cache: true
-
-    - name: Download dependencies
-      run: go mod download
-
-    - name: Verify dependencies
-      run: go mod verify
+        fetch-depth: '0'
 
     - name: Check formatting
       run: |
@@ -140,14 +128,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Set up Go
-      uses: actions/setup-go@v5
-      with:
-        go-version: '1.23'
-        cache: true
+    - name: Setup Go environment
+      uses: ./.github/actions/setup-go
 
     - name: Run benchmarks
       run: |
