--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,16 +21,10 @@ jobs:
       github.event_name == 'workflow_dispatch'
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+    - name: Setup Go environment
+      uses: ./.github/actions/setup-go
       with:
-        fetch-depth: 0  # Fetch all history for changelog generation
-
-    - name: Set up Go
-      uses: actions/setup-go@v5
-      with:
-        go-version: '1.23'
-        cache: true
+        fetch-depth: '0'
 
     - name: Generate version tag
       id: version
@@ -232,7 +226,7 @@ jobs:
 
         ### ⚙️ Requirements
 
-        - Go 1.21 or later
+        - Go 1.24 or later
         EOF
 
         echo "✅ Changelog generated successfully"
