--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -8,6 +8,10 @@ permissions:
   contents: read
   pull-requests: write
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number }}
+  cancel-in-progress: true
+
 jobs:
   validate:
     name: Validate PR
@@ -19,15 +23,18 @@ jobs:
       with:
         fetch-depth: '0'
 
-    - name: Check formatting
+    - name: Install goimports
+      run: go install golang.org/x/tools/cmd/goimports@latest
+
+    - name: Check formatting and imports
       run: |
-        if [ -n "$(gofmt -l .)" ]; then
-          echo "❌ Code is not formatted. Run 'make fmt' to fix."
-          echo "Files that need formatting:"
-          gofmt -l .
+        GOBIN=$(go env GOPATH)/bin
+        if [ -n "$($GOBIN/goimports -l -local github.com/mstephenholl/go-solar .)" ]; then
+          echo "Code is not formatted or imports need organization. Run 'make fmt' to fix."
+          $GOBIN/goimports -d -local github.com/mstephenholl/go-solar .
           exit 1
         fi
-        echo "✅ Code is properly formatted"
+        echo "Code is properly formatted"
 
     - name: Run go vet
       run: go vet ./...
