--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -12,6 +12,9 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number }}
   cancel-in-progress: true
 
+env:
+  COVERAGE_THRESHOLD: '80'
+
 jobs:
   validate:
     name: Validate PR
@@ -72,8 +75,11 @@ jobs:
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         script: |
+          const upsert = require('./.github/scripts/upsert-comment.js');
           const coverage = '${{ steps.coverage.outputs.coverage }}';
           const color = '${{ steps.badge.outputs.color }}';
+          const threshold = process.env.COVERAGE_THRESHOLD;
+          const coverageDetails = require('fs').readFileSync('coverage.txt', 'utf8');
 
           const body = `## 📊 Test Coverage Report
 
@@ -83,52 +89,27 @@ jobs:
           <summary>📈 Coverage Details</summary>
 
           \`\`\`
-          ${require('fs').readFileSync('coverage.txt', 'utf8')}
+          ${coverageDetails}
           \`\`\`
 
           </details>
 
           ---
-          *Coverage threshold: 80%*
-          ${parseFloat(coverage) >= 80 ? '✅ Coverage meets threshold!' : '⚠️ Coverage below threshold'}`;
+          *Coverage threshold: ${threshold}%*
+          ${parseFloat(coverage) >= parseInt(threshold) ? '✅ Coverage meets threshold!' : '⚠️ Coverage below threshold'}`;
 
-          const { data: comments } = await github.rest.issues.listComments({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            issue_number: context.issue.number,
-          });
-
-          const botComment = comments.find(comment =>
-            comment.user.type === 'Bot' &&
-            comment.body.includes('Test Coverage Report')
-          );
-
-          if (botComment) {
-            await github.rest.issues.updateComment({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              comment_id: botComment.id,
-              body: body
-            });
-          } else {
-            await github.rest.issues.createComment({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: context.issue.number,
-              body: body
-            });
-          }
+          await upsert({ github, context, marker: 'Test Coverage Report', body });
 
     - name: Check coverage threshold
       run: |
         COVERAGE=${{ steps.coverage.outputs.coverage }}
-        THRESHOLD=80
+        THRESHOLD=${{ env.COVERAGE_THRESHOLD }}
         if (( $(echo "$COVERAGE < $THRESHOLD" | bc -l) )); then
-          echo "⚠️  Coverage ($COVERAGE%) is below threshold ($THRESHOLD%)"
+          echo "Coverage ($COVERAGE%) is below threshold ($THRESHOLD%)"
           echo "Please add more tests to improve coverage"
           exit 1
         fi
-        echo "✅ Coverage ($COVERAGE%) meets threshold ($THRESHOLD%)"
+        echo "Coverage ($COVERAGE%) meets threshold ($THRESHOLD%)"
 
   benchmark:
     name: Run Benchmarks
@@ -147,8 +128,8 @@ jobs:
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         script: |
-          const fs = require('fs');
-          const benchmark = fs.readFileSync('benchmark.txt', 'utf8');
+          const upsert = require('./.github/scripts/upsert-comment.js');
+          const benchmark = require('fs').readFileSync('benchmark.txt', 'utf8');
 
           const body = `## ⚡ Benchmark Results
 
@@ -161,29 +142,4 @@ jobs:
 
           </details>`;
 
-          const { data: comments } = await github.rest.issues.listComments({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            issue_number: context.issue.number,
-          });
-
-          const botComment = comments.find(comment =>
-            comment.user.type === 'Bot' &&
-            comment.body.includes('Benchmark Results')
-          );
-
-          if (botComment) {
-            await github.rest.issues.updateComment({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              comment_id: botComment.id,
-              body: body
-            });
-          } else {
-            await github.rest.issues.createComment({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: context.issue.number,
-              body: body
-            });
-          }
+          await upsert({ github, context, marker: 'Benchmark Results', body });
